--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@angular/core": "~7.1.0",
     "@angular/flex-layout": "^7.0.0-beta.21",
     "@angular/forms": "~7.1.0",
+    "@angular/http": "~7.1.0",
     "@angular/material": "^7.1.1",
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
+    "@angular/platform-server": "~7.1.0",
     "@angular/pwa": "^0.11.3",
     "@angular/router": "~7.1.0",
     "@angular/service-worker": "~7.1.0",
